# umareaderorg

./: .gitignore  .mcp.json  agent-design.md  app-design.md  design.md  main.py  pyproject.toml
agents/: llm.py  mcp_server.py
agents/graphs/assessment/: graph.py  state.py
agents/graphs/assessment/nodes/: answer_scorer.py  coverage_analyzer.py  feedback_phraser.py  ideal_gist_generator.py  judge.py  planner.py  question_generator.py
agents/graphs/assessment/prompts/: answer_scorer.py  coverage_analyzer.py  feedback_phraser.py  ideal_gist_generator.py  judge.py  planner.py  question_generator.py
agents/graphs/comprehension_coach/: graph.py  state.py
agents/graphs/comprehension_coach/nodes/: feedback_phraser.py  judge.py  planner.py  prompt_generator.py  response_evaluator.py
agents/graphs/comprehension_coach/prompts/: feedback_phraser.py  judge.py  planner.py  prompt_generator.py  response_evaluator.py
agents/graphs/text_selection/: graph.py  state.py
agents/graphs/text_selection/nodes/: judge.py  planner.py  text_generator.py  topic_matcher.py  vocab_extractor.py
agents/graphs/vocab_preview/: graph.py  state.py
agents/tools/: assessment_tool.py  bundle_generator.py  comprehension_coach_tool.py  feedback_tool.py  strategy_selector.py  text_selection_tool.py  vocab_preview_tool.py
app/: level_adjuster.py  supabase_client.py
app/data/: placement_passages.py  session_content.py
app/pages/: dashboard.py  login.py  placement.py  placement_result.py  session.py  teacher.py  welcome.py
tools/: decode_session_code.py
utils/: config.py  session_code.py
(+11 files in other folders)
